scripts/resources/raw/yaml/setup/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: ((PathPrefix(`/api`) || PathPrefix(`/dashboard`)))
      services:
        - kind: TraefikService
          name: api@internal
          namespace: kube-system
